tests/rosetta/out/Elixir/approximate-equality.error
run: exit status 1
    error: imported Kernel.abs/1 conflicts with local function
    │
  4 │   def abs(x) do
    │       ^
    │
    └─ /tmp/approximate-equality.exs:4:7: Main (module)

** (CompileError) /tmp/approximate-equality.exs: cannot compile module Main (errors have been logged)

